--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": "^8.1",
         "codeigniter4/framework": "^4.0",
         "endroid/qr-code": "^5.0",
-        "google/apiclient": "^2.0"
+        "google/apiclient": "^2.0",
+        "tecnickcom/tcpdf": "^6.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
